# GlowingOres

./: .gitignore  CMakeLists.txt  LICENSE  README
include/: shader.h  simple_post.h  stb_image_imp.h
include/glad/: glad.h
minecraft_shaders/: shader.properties
minecraft_shaders/shaders/: block.properties  composite.fsh  composite1.fsh  composite2.fsh  composite2.vsh  final.fsh  gbuffers_terrain.fsh  gbuffers_terrain.vsh
shaders/: bloom_extract.frag  glowing.frag  glowing.vert  quad.vert  simple_post.frag
src/: glad.c  post_processor.cpp  shader.cpp  simple_post.cpp  test.cpp  test_glowing.cpp  test_shader.cpp
standalone/: CMakeLists.txt
standalone/include/: logger.h  post_processor.h  shader.h  simple_text_renderer.h  text_renderer.h
standalone/shaders/: basic.frag  basic.vert  blur.frag  glowing.frag  glowing.vert  quad.vert
standalone/src/: shader.cpp  simple_post.cpp  test_glowing.cpp
